--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
+    "@tailwindcss/postcss": "^4.0.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
