--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-themes": "^0.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
