--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "framer-motion": "^12.23.26",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "katex": "^0.16.27",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-themes": "^0.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
