--- a/package.json
+++ b/package.json
@@ -12,15 +12,11 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^8.18.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/three": "^0.182.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
-    "framer-motion-3d": "^12.4.13",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.27",
@@ -36,8 +32,7 @@
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
-    "tailwind-merge": "^2.6.0",
-    "three": "^0.182.0"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
